and now, the overflowing the image from grid cell resolved using object-fit:cover anf height:100%

--- a/css/style.css
+++ b/css/style.css
@@ -226,8 +226,11 @@ body {
   grid-template-rows: repeat(7, 5vw);
   grid-gap: 1.5rem;
   padding: 1.5rem; }
-  .gallery > * {
-    width: 100%; }
+  .gallery__img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    display: block; }
 
 .footer {
   background-color: #101d2c;
